ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-server
  annotations: 
    nginx.ingress.kubernetes.io/use-regex: "true"
spec: 
  ingressClassName: nginx 
  rules:
    - host: todo.com
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: server-service
                port: 
                  number: 80
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: client-service
                port: 
                  number: 80
